--- a/SampleApp/FrontEnd/Pages/FetchData.razor
+++ b/SampleApp/FrontEnd/Pages/FetchData.razor
@@ -7,7 +7,7 @@
 <h1>Weather forecast</h1>
 
 <p>This component demonstrates fetching data from a service.</p>
-
+<p>Esta es una prueba</p>
 @if (forecasts == null)
 {
     <p><em>Loading...</em></p>
