--- a/SampleApp/FrontEnd/Pages/Prueba.razor
+++ b/SampleApp/FrontEnd/Pages/Prueba.razor
@@ -42,6 +42,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
+        DateTime dato = DateTime.Now;
         forecasts = await ForecastClient.GetForecastAsync(DateTime.Now);
     }
 }
