--- a/SampleApp/FrontEnd/Shared/NavMenu.razor
+++ b/SampleApp/FrontEnd/Shared/NavMenu.razor
@@ -15,6 +15,13 @@
             </NavLink>
         </div>
     </nav>
+        <nav class="flex-column">
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Prueba" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Prueba
+            </NavLink>
+        </div>
+    </nav>
 </div>
 
 @code {
